<resources>
    <string name="app_name">mobilefinal</string>

    //login
    <string name="user_id_topic">User Id</string>
    <string name="password_topic">Password</string>
    <string name="login_btn">Login</string>
    <string name="regis_link">Register New Account</string>

    //register
    <string name="name_topic">Name</string>
    <string name="age_topic">Age</string>
    
    //home
    <string name="hello_topic">Hello Firstname LastName</string>
    <string name="quote_topic">quote</string>
    <string name="profile_setup">profile setup</string>
    <string name="myfriend">My Friends</string>
    <string name="sign_out">sign out</string>
</resources>
